--- a/playbooks/multi-instance.yml
+++ b/playbooks/multi-instance.yml
@@ -25,3 +25,10 @@
   serial: 100%
   tasks:
     - include: ../roles/gitea/tasks/main.yml
+
+- name: Deploy dokuwiki
+  hosts: dokuwiki
+  user: root
+  serial: 100%
+  tasks:
+    - include: ../roles/dokuwiki/tasks/main.yml
