Create swarm and test swarm creation. test function needed renamed because test is a bash thing already

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -19,6 +19,8 @@
   tasks:
    - include: ../roles/common/tasks/main.yml
 
+- import_playbook: swarm.yml
+
 # - name: Deploy startup-infrastructure swarm stack
 #   hosts: bootstrap
 #   user: root
