--- a/tasks/swarm-bootstrap.yml
+++ b/tasks/swarm-bootstrap.yml
@@ -1,7 +1,7 @@
 ---
 - name: Initialize swarm on the bootstrap manager
   command: >
-    docker swarm init --advertise-addr "{{ ansible_eth1.ipv4.address }}"
+    docker swarm init --advertise-addr "{{ join_addr }}"
   register: docker_swarm_init
   changed_when: docker_swarm_init.rc == 0
   ignore_errors: true
@@ -20,3 +20,4 @@
   set_fact:
     manager_key: "{{ manager_key }}"
     worker_key: "{{ worker_key }}"
+    swarm_init_ip: "{{ join_addr }}"
