Used dos2unix to convert all files in repo to unix and set up Traefik service

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -21,9 +21,9 @@
 
 - import_playbook: swarm.yml
 
-# - name: Deploy startup-infrastructure swarm stack
-#   hosts: bootstrap
-#   user: root
-#   serial: 100%
-#   tasks:
-#     - include: ../roles/startup-infrastructure/tasks/main.yml
+- name: Deploy startup-infrastructure swarm stack
+  hosts: bootstrap
+  user: root
+  serial: 100%
+  tasks:
+    - include: ../roles/startup-infrastructure/tasks/main.yml
