--- a/roles/startup-infrastructure/tasks/main.yml
+++ b/roles/startup-infrastructure/tasks/main.yml
@@ -1,6 +1,20 @@
 ---
+- name: Create appnet
+  shell: >
+    docker network ls | grep "appnet" ||
+    {
+      docker network create --driver overlay appnet
+    }
+  become: true
+
+
 - name: Place the compose file
-  template: src=../roles/startup-infrastructure/templates/docker-compose.yml.j2 dest=/data/startup-infrastructure.yml
+  template: 
+    src: ../roles/startup-infrastructure/templates/docker-compose.yml.j2 
+    dest: /data/startup-infrastructure.yml
+    mode: 0600
+  become: true
 
 - name: Run stack deploy
   shell: cd /data && docker stack deploy -c startup-infrastructure.yml startup-infrastructure
+  become: true
