--- a/roles/startup-infrastructure/tasks/main.yml
+++ b/roles/startup-infrastructure/tasks/main.yml
@@ -1,27 +1,62 @@
 ---
-- name: Create appnet
-  shell: >
-    docker network ls | grep "appnet" ||
-    {
-      docker network create --driver overlay appnet
-    }
+- name: Create Startup Infrastructure Directory
+  file:
+    path: /opt/startup-infrastructure
+    state: directory
   become: true
 
-
-- name: Place the compose file
-  template: 
-    src: ../roles/startup-infrastructure/templates/docker-compose.yml.j2 
-    dest: /data/startup-infrastructure.yml
-    mode: 0600
+- name: Download Helm
+  get_url:
+    url: https://get.helm.sh/helm-v2.14.3-linux-amd64.tar.gz
+    dest: /tmp/helm.tar.gz
   become: true
 
-- name: Run stack deploy
-  shell: >
-    docker stack deploy -c /data/startup-infrastructure.yml startup-infrastructure
+- name: Unarchive Helm
+  unarchive:
+    src: /tmp/helm.tar.gz
+    dest: /tmp
+    copy: no
   become: true
 
-- name: Give containers time to spin up
-  wait_for:
-    timeout: 120
+- name: Copy Helm to /usr/local/bin
+  command: bash -c "mv /tmp/linux-amd64/helm /usr/local/bin/helm && rm -rf /tmp/linux-amd64"
+  become: true
 
-- include_tasks: configure-portainer.yml
+- name: Make Helm executable
+  file:
+    dest: /usr/local/bin/helm
+    mode: a+x
+  become: true
+
+- name: Download kubectl
+  get_url:
+    url: https://storage.googleapis.com/kubernetes-release/release/v1.16.0/bin/linux/amd64/kubectl
+    dest: /usr/local/bin/
+  become: true
+
+- name: Make kubectl executable
+  file:
+    dest: /usr/local/bin/kubectl
+    mode: a+x
+  become: true
+
+- name: Create Tiller serviceaccount
+  command: kubectl -n kube-system create serviceaccount tiller
+  become: true
+  environment:
+    KUBECONFIG: "{{ rke_directory }}/kube_config_{{ rke_cluster_name }}.yaml"
+
+- name: Create Tiller rbac
+  become: true
+  command: >
+    kubectl create clusterrolebinding tiller \
+      --clusterrole=cluster-admin \
+      --serviceaccount=kube-system:tiller
+  environment:
+    KUBECONFIG: "{{ rke_directory }}/kube_config_{{ rke_cluster_name }}.yaml"
+
+- name: Initialize Tiller
+  command: helm init --service-account tiller
+  become: true
+  environment:
+    KUBECONFIG: "{{ rke_directory }}/kube_config_{{ rke_cluster_name }}.yaml"
