--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -1,74 +1,9 @@
 ---
-- name: Create RKE directory
-  file:
-    path: "{{ rke_directory }}"
-    state: directory
-    mode: '0774'
-    owner: "{{ standard_user }}"
-    group: "{{ standard_user }}"
-  delegate_to: localhost
-  run_once: true
-  become: true
+- name: RKE Pre Tasks
+  import_tasks: pre-rke.yml
 
-- name: Create RKE Configs directory
-  file:
-    path: "{{ rke_directory }}/configs"
-    state: directory
-  delegate_to: localhost
-  run_once: true
-  become: true
+- name: RKE Deploy Kubernetes
+  import_tasks: deploy-rke.yml
 
-- name: Install RKE
-  get_url:
-    dest: "{{ rke_directory }}/rke"
-    url: https://github.com/rancher/rke/releases/download/v{{ rke_version }}/rke_linux-amd64
-  delegate_to: localhost
-  run_once: true
-  become: true
-
-- name: Make RKE executable
-  file:
-    dest: "{{ rke_directory }}/rke"
-    mode: +x
-  delegate_to: localhost
-  run_once: true
-  become: true
-
-- name: Put RKE cluster config in place
-  template:
-    src: ../templates/rke-cluster-deployment.yaml.j2
-    dest: "{{ rke_directory }}/{{ rke_cluster_name }}.yaml"
-  delegate_to: localhost
-  run_once: true
-  become: true
-
-- name: Put RKE configs in place
-  template:
-    src: ../templates/rke-configs/{{ item }}.j2
-    dest: "{{ rke_directory }}/configs/{{ item }}"
-  with_items:
-    - kube-state-metrics-deployment.yaml
-    - kube-state-metrics-service.yaml
-    - kube-state-metrics-rbac.yaml
-  delegate_to: localhost
-  run_once: true
-  become: true
-
-- name: Run RKE
-  shell: >
-    bash -c "{{ rke_directory }}/rke up --config {{ rke_directory }}/{{ rke_cluster_name }}.yaml"
-  delegate_to: localhost
-  run_once: true
-  become: true
-
-- name: Set permissions on rke directory
-  file:
-    path: "{{ rke_directory }}"
-    state: directory
-    mode: '0774'
-    owner: "{{ standard_user }}"
-    group: "{{ standard_user }}"
-    recurse: yes
-  delegate_to: localhost
-  run_once: true
-  become: true
+- name: RKE Post Tasks
+  import_tasks: post-rke.yml
